			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.1908 2001/10/14 17:25:29 fujisawa Exp $

<200110>
2001-10-15 Shin'ichi Fujisawa	<fujisawa@kame.net>
	* kame/sys/netinet6/natpt_{defs.h,trans.c}
	- Fix a bug to miscalculate when compute a checksum in
	  IPv6 -> IPv4 translation.

Thu Oct 11 21:57:50 JST 2001 keiichi@iij.ad.jp
	mip6
	* fix BU list management function.
	* introduce MIP6_ALLOW_COA_FALLBACK kernel option.
	  this allows you to use a coa as a src address if the peer
	  doesn't recognize a home address destination option.
	  may arouse a mip6 believe's anger, but very useful.

Wed Oct 10 17:38:05 JST 2001 sakane@kame.net
	* kame/kame/racoon:
	Fixed racoon crash when uni-directional policy is defined.
	racoon negoticate two SAs even in the case of the uni-directional
	policy.

Wed Oct 10 04:52:54 JST 2001  itojun@iijlab.net
	* bsdi4: use PULLDOWN_TEST (m_pulldown) codepath.  improves conformance
	  when ipv6 extension headers are present.

Wed Oct 10 10:27:24 JST 2001  itojun@iijlab.net
	* netbsd/sys/netinet/raw_ip.c: fix a typo which could lead to kernel
	  panic when ICMPv4 is returned against raw ip socket.
	  reported by kato@wide

2001-10-10  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/rtadvd/rtadvd.c (find_prefix, prefix_match): corrected
	prefix calculation:
	- avoid invalid pointer access when bytelen is a multiple of 8
	- avoid using the right shift operator to make the code look safer

2001-10-09  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/rtadvd/config.c (getconfig): made configuration parser
	compatible with FreeBSD 4.4-RELEASE, in terms of the route
	information option:
	- allowed rtrXXX instead of rtXXX.
	- made route lifetime optional.
	In any case, some warning messages are printed as well, so that the
	user can notice the change and fix the configuration.

Tue Oct  9 08:43:04 JST 2001 sakane@kame.net
	* kame/kame/racoon/schedule.c:
	the entry of the schedule is marked with dead before the function in